<resources>
    <string name="app_name">Rock Paper Scissors</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="score_header">You lost</string>
    <string name="title_play_button">Play</string>
    <string name="title_name_field">Enter your name</string>
    <string name="title_header">Rock Paper Scissors</string>
    <string name="game_rock_button">Rock</string>
    <string name="game_paper_button">paper</string>
    <string name="game_scissors_button">Scissors</string>
    <string name="game_ai_choice_text">The Choice of the Computer:</string>
    <string name="title_enter_name">Please enter your Name</string>
    <string name="game_score">Score</string>
    <string name="score_format">Your score is %s.</string>
    <string name="name_format">Congratulations %s!</string>
    <string name="game_lives_text">Lives</string>
    <string name="game_over_text">Game Over!</string>
    <string name="play_again_button_text">Play Again</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="leaderboard_header">Leaderboard</string>
    <string name="clear_leaderboard_button_text">Clear Leaderboard</string>
    <string name="game_player_name_text">Player</string>
    <string name="lb_name_button_text">Name</string>
    <string name="lb_score_button_text">Score</string>
    <string name="lb_date_button_text">Date</string>
    <string name="header_text">Best Players</string>
    <string name="game_result">Game Result</string>
    <string name="close_button_text">Close</string>
</resources>